<resources>
    <string name="app_name">Status Saver</string>

    <string name="whatsapp_business_not_installed">You don`t have WA Business\n
Please install it first</string>
    <string name="Install_whatsApp_business">Install WA Business</string>

    <string name="whatsapp_not_installed">You don`t have WA \n
Please install it first</string>
    <string name="Install_whatsApp">Install WA</string>

    <string name="images">Images</string>
    <string name="videos">Videos</string>

    <string name="not_installed">The desired application is not installed on your device</string>


    <string name="privacy_policy_title">Privacy Policy</string>


    <string name="enter_number_warn">Please enter a WhatsApp number first.</string>
    <string name="enter_text">Enter your message (optional)</string>
    <string name="enter_number">Enter number</string>
    <string name="phone_number">Phone Number</string>
    <string name="wa_business">WA Business</string>
    <string name="whatsapp">WhatsApp</string>

    <string name="country_flag">Country Flag</string>
    <string name="format">Format</string>
    <string name="plus">+</string>

    <string name="open_via">Select an app to open this link.</string>
    <string name="device_default">Device Default</string>
    <string name="select_country">Select Country</string>
    <string name="all_countries">All Countries</string>
    <string name="message">Message</string>

    <string name="isd_detected_message_no_country">It looks like you entered the ISD Code along with the phone number. We tried to detect what country it was, but were unable. Try removing the ISD code from the phone number and continuing again.\nYou can press ignore if you wish to continue anyway. </string>
    <string name="isd_detected_message">It looks like you entered the ISD Code along with the phone number. We have tried to detect the appropriate country and set it automatically</string>
    <string name="did_we_get_it_right">Did we get it right?</string>
    <string name="no_number_entered">No phone number entered.</string>
    <string name="isd_code_detected">ISD Code Detected</string>
    <string name="ok_continue">Continue</string>
    <string name="country">Country</string>
    <string name="ignore">Ignore</string>
    <string name="paste">Paste</string>

    <string name="wa_message">Optional message to include which spans more than a single line.</string>
    <string name="wa_number">1234567890</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="search_country">Search country</string>
    <string name="wa_status_saver">WA Status Saver</string>
    <string name="menu">Menu</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="pick_the_language_for_your_app">Pick the language for your app</string>
    <string name="notifications">Notifications</string>
    <string name="notified_of_new_statuses">Notified of new statuses</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_to_reduce_eye_strain">Help to reduce eye strain</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="share_app">Share App</string>
    <string name="share_app_with_yours_friend">Share App with yours friend</string>
    <string name="rate_us">Rate Us</string>
    <string name="support_our_work_by_your_rating">Support our work by your rating</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="you_need_to_allow_the_storage_permission_n_to_save_statuses">You need to allow the storage permission \n to save statuses</string>
    <string name="status_saver">Status Saver</string>
    <string name="download_your_favorite_statuses">Download Your Favorite Statuses</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="got_it">Got it</string>
    <string name="grant_storage_permission">Grant Storage Permission</string>
    <string name="allow_storage_permission_to_save_n_status_in_you_mobile">Allow storage permission to save\n status in you mobile</string>
    <string name="new_update_is_available">New Update Is Available</string>
    <string name="the_latest_version_of_status_saver_is_available_n_with_new_and_improved_features">The latest version of Status Saver is available\n with new and improved features</string>
    <string name="okay">Okay</string>
    <string name="send_message">Send Message</string>
    <string name="share_link">Share Link</string>
    <string name="no_media_found">No Media Found</string>
    <string name="you_don_t_have_wa_business_n_please_install_it_first">You don`t have WA Business\n Please install it first</string>
    <string name="install_app">Install App</string>
    <string name="how_to_use">How to use?</string>
    <string name="you_need_to_allow_the_storage_permission_to_n_save_statuses_click_on_use_this_folder_n_button_in_setting_to_give_access">You need to allow the storage permission to \n save statuses. Click on (use this folder) \n button in setting to give access</string>
    <string name="repost">Repost</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="select_app_language">Select App Language</string>

    <string name="downloaded">Downloaded</string>
    <string name="directChat">Direct Chat</string>
    <string name="status">Status</string>

</resources>