<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutEnterNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_enter_number_edit_text"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/selectCountry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?actionBarItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/flag"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/country_flag"
                    android:scaleType="center"
                    android:visibility="gone"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/plus"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/isdCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    app:drawableEndCompat="@drawable/ic_drop_down"
                    tools:text=" 91" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/vertical_line_view" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/waNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/paste"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/enter_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="18sp"
                    tools:text="@string/wa_number" />

                <ImageButton
                    android:id="@+id/paste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/paste"
                    android:padding="12dp"
                    android:src="@drawable/ic_paste_number"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </RelativeLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/optionalMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutEnterNumber"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_enter_message"
            android:fadingEdgeLength="10dp"
            android:gravity="bottom"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            android:maxHeight="120dp"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:requiresFadingEdge="vertical"
            android:scrollHorizontally="false"
            tools:text="@string/wa_message" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/green_primary"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="Send Message"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShareLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="Share Link"
                android:textAllCaps="false"
                android:textColor="@color/dark_blackish_green"
                android:textSize="18sp"
                app:cornerRadius="100dp" />
        </LinearLayout>


    </RelativeLayout>


</ScrollView>