<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_permission_bottom_sheet"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="16dp"
        android:text="@string/isd_code_detected"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/message"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:justificationMode="inter_word"
        android:paddingHorizontal="16dp"
        android:text="@string/isd_detected_message"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/did_we_get_it_right"
        android:textColor="@color/dark_blackish_green"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_menu_item">

        <RelativeLayout
            android:id="@+id/detectedCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/detectedFlag"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="12dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="country_flag"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                <TextView
                    android:id="@+id/detected_country_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="18sp"
                    tools:text="India" />

                <TextView
                    android:id="@+id/detected_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="end|center_vertical"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textSize="18sp"
                    tools:text="+91" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/layoutItem"
                android:background="#330C3035" />

        </RelativeLayout>

<!--        <include-->
<!--            android:id="@+id/detectedCountry"-->
<!--            layout="@layout/item_isd_code_detected"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="4dp" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detectedCountry"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/phone_number"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/phoneNumber"
                android:textColor="@color/dark_blackish_green"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/dark_blackish_green"
                android:textSize="18sp"
                tools:text="1234567890" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_cancel"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:contentDescription="button cancel"
            android:text="@string/cancel"
            android:textColor="@color/green_primary" />

        <Button
            android:id="@+id/ok_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/cancel_button"
            android:background="@drawable/background_custom_switch"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/ok_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/green_primary" />

    </RelativeLayout>

</LinearLayout>